<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--title-->
    <TextView
        android:id="@+id/type_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/poke_tracker"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/type_subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_new_catch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_header" />

    <EditText
        android:id="@+id/NationalNumET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/nat_numLB"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        android:hint="@string/NatNum_896"/>

    <TextView
        android:id="@+id/defenceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/defence"
        app:layout_constraintStart_toStartOf="@+id/attackTV"
        app:layout_constraintTop_toBottomOf="@+id/attackTV"
        android:hint="@string/zero"/>

    <TextView
        android:id="@+id/attackTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/attack"
        app:layout_constraintEnd_toEndOf="@+id/hpTV"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/hpTV"
        app:layout_constraintTop_toBottomOf="@+id/hpTV"
        android:hint="@string/zero"/>

    <TextView
        android:id="@+id/hpTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/hp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/BaseStatHead"
        android:hint="@string/zero"/>

    <TextView
        android:id="@+id/weightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:text="@string/weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeightTV" />

    <TextView
        android:id="@+id/nat_numLB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/national_number"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/type_subhead" />

    <TextView
        android:id="@+id/LevelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightTV" />

    <TextView
        android:id="@+id/BaseStatHead"
        android:layout_width="97dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/base_stats"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LevelTV" />

    <TextView
        android:id="@+id/GenderTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/gender"
        app:layout_constraintTop_toBottomOf="@+id/speciesTV"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        tools:layout_editor_absoluteX="49dp" />

    <TextView
        android:id="@+id/NameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="28dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/nat_numLB" />

    <TextView
        android:id="@+id/HeightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="40dp"
        android:text="@string/height"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/GenderTV" />

    <TextView
        android:id="@+id/speciesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/species"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/NameTV" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/NameTV"
        app:layout_constraintTop_toBottomOf="@+id/NationalNumET"
        android:hint="@string/glastrier"/>

    <EditText
        android:id="@+id/speciesET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/speciesTV"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        android:hint="@string/wild_horse_pokemon"/>

    <RadioButton
        android:id="@+id/maleRB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        app:layout_constraintBaseline_toBaselineOf="@+id/femaleRB"
        app:layout_constraintStart_toEndOf="@+id/femaleRB" />

    <RadioButton
        android:id="@+id/femaleRB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"
        app:layout_constraintBaseline_toBaselineOf="@+id/GenderTV"
        app:layout_constraintEnd_toStartOf="@+id/maleRB" />

    <RadioButton
        android:id="@+id/unkRB"
        android:layout_width="62dp"
        android:layout_height="49dp"
        android:text="@string/unknown"
        app:layout_constraintBaseline_toBaselineOf="@+id/maleRB"
        app:layout_constraintStart_toEndOf="@+id/maleRB"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"/>

    <EditText
        android:id="@+id/heightET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number|numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/HeightTV"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        android:hint="@string/height_hint"/>

    <EditText
        android:id="@+id/weightET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightTV"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        android:hint="@string/weight_hint"/>

    <EditText
        android:id="@+id/HpEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/hpTV"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        android:hint="@string/zero"/>

    <EditText
        android:id="@+id/AttackET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/attackTV"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        android:hint="@string/zero"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/LevelTV"
        app:layout_constraintStart_toStartOf="@+id/weightET" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/defenceTV"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        android:hint="@string/zero"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="380dp" />

    <Button
        android:id="@+id/ResetBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/air_force_blue"
        android:text="@string/reset"
        app:layout_constraintEnd_toStartOf="@+id/SaveBt"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

    <Button
        android:id="@+id/SaveBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/air_force_blue"
        android:text="@string/save"
        app:layout_constraintBaseline_toBaselineOf="@+id/ResetBt"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        tools:layout_editor_absoluteX="285dp" />

</androidx.constraintlayout.widget.ConstraintLayout>